--- a/弹性盒模型/4-淘宝商城精灵图制作.html
+++ b/弹性盒模型/4-淘宝商城精灵图制作.html
@@ -8,10 +8,10 @@
     <title>Document</title>
     <script>
         (function(){
-               var html = document.documentElement;
-               var width = html.getBoundingClientRect().width;
-               html.style.fontSize = width / 15 + 'px'
-         })();
+            var html = document.documentElement;
+            var width = html.getBoundingClientRect().width;
+            html.style.fontSize = width / 15 + 'px'
+        })();
     </script>
     <style>
         html,
@@ -46,10 +46,10 @@
         }
 
         .rows {
-             /*弹性盒模型中，老版的写在上面*/
-             display: -webkit-box;
-             display: flex;
-             padding: 0.4rem 0.52rem 0 0.52rem;
+            /*弹性盒模型中，老版的写在上面*/
+            display: -webkit-box;
+            display: flex;
+            padding: 0.4rem 0.52rem 0 0.52rem;
 
         }
 
@@ -62,71 +62,73 @@
         }
 
         .rows div a {
-             color:#666;
-             line-height:1.04rem;
-             display: block;
+            color:#666;
+            line-height:1.04rem;
+            display: block;
         }
 
         .rows div a:before {
-             content: "";
-             display: block;
-             width:1.7rem;
-             height:1.7rem;
-             margin: 0 auto;
-             background-size:1.7rem,1.7rem;
+            content: "";
+            display: block;
+            width:1.7rem;
+            height:1.7rem;
+            margin: 0 auto;
+            background-size:9rem 3.6rem;
+            background-image: url("img/icon.jpg");
         }
 
         .rows:nth-of-type(1) div:nth-of-type(1) a:before {
-            background-image: url("img/1.jpg");
+            background-position: 0 0;
         }
 
         .rows:nth-of-type(1) div:nth-of-type(2) a:before {
-            background-image: url("img/2.jpg");
+            background-position: -1.8rem 0;
         }
 
         .rows:nth-of-type(1) div:nth-of-type(3) a:before {
-            background-image: url("img/3.jpg");
+            background-position: -3.6rem 0;
         }
 
         .rows:nth-of-type(1) div:nth-of-type(4) a:before {
-            background-image: url("img/4.jpg");
+            background-position: -5.4rem 0;
         }
 
         .rows:nth-of-type(1) div:nth-of-type(5) a:before {
-            background-image: url("img/4.jpg");
+            background-position: -7.2rem 0;
         }
 
         .rows:nth-of-type(2) div:nth-of-type(1) a:before {
-            background-image: url("img/6.jpg");
+            background-position: 0 -1.8rem;
         }
         .rows:nth-of-type(2) div:nth-of-type(2) a:before {
-            background-image: url("img/7.jpg");
+            background-position: -1.8rem  -1.8rem;
         }
         .rows:nth-of-type(2) div:nth-of-type(3) a:before {
-            background-image: url("img/8.jpg");
+            background-position: -3.6rem -1.8rem;
         }
         .rows:nth-of-type(2) div:nth-of-type(4) a:before {
-            background-image: url("img/9.jpg");
+            background-position: -5.4rem -1.8rem;
         }
         .rows:nth-of-type(2) div:nth-of-type(5) a:before {
-            background-image: url("img/10.jpg");
+            background-position: -7.2rem -1.8rem;
         }
+         /*精灵图的使用： background-image|background-position| 制作：制作精灵图的时候适当留一些空隙 */
     </style>
 </head>
 <body>
-    <div class="rows">
-        <div><a href="javascript:;">天猫</a></div>
-        <div><a href="javascript:;">聚划算</a></div>
-        <div><a href="javascript:;">天猫国际</a></div>
-        <div><a href="javascript:;">外卖</a></div>
-        <div><a href="javascript:;">天猫超市</a></div>
-    </div>
-    <div class="rows">
-        <div><a href="javascript:;">充值中心</a></div>
-        <div> <a href="javascript:;">飞猪旅行</a></div>
-        <div><a href="javascript:;">领金币</a></div>
-        <div><a href="javascript:;">拍卖</a></div>
-        <div> <a href="javascript:;">分类</a></div>
-    </div>
+<div class="rows">
+    <div><a href="javascript:;">天猫</a></div>
+    <div><a href="javascript:;">聚划算</a></div>
+    <div><a href="javascript:;">天猫国际</a></div>
+    <div><a href="javascript:;">外卖</a></div>
+    <div><a href="javascript:;">天猫超市</a></div>
+</div>
+<div class="rows">
+    <div><a href="javascript:;">充值中心</a></div>
+    <div> <a href="javascript:;">飞猪旅行</a></div>
+    <div><a href="javascript:;">领金币</a></div>
+    <div><a href="javascript:;">拍卖</a></div>
+    <div> <a href="javascript:;">分类</a></div>
+</div>
 </body>
 </html>
