--- a/移动端事件/1-移动端常见的事件.html
+++ b/移动端事件/1-移动端常见的事件.html
@@ -6,6 +6,13 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+        div {
+            width:200px;
+            height:200px;
+            background-color: red;
+        }
+    </style>
 </head>
 <body>
     <div id="box"></div>
@@ -16,8 +23,11 @@
     *        手指按下: ontouchstart
     *        手指移动: ontouchmomv
     *        手指抬起: ontouchend
+    *    浏览器的模拟器不支持事件绑定的第一种形式，可以通过addEventListener
     * */
     var oBox = document.getElementById("box");
-
+    oBox.ontouchstart = function(){
+         alert("1");
+    }
 </script>
 </html>
