--- a/移动端事件/3-移动端阻止PC事件的优点.html
+++ b/移动端事件/3-移动端阻止PC事件的优点.html
@@ -32,6 +32,7 @@
        阻止PC事件
     </div>
     <div class="box"></div>
+    <input type="text" id="txt">
 </body>
 <script>
      /*
@@ -39,9 +40,16 @@
      *       1. 解决"点透"问题
      *       2. IOS10以后通过meta标签禁止用户缩放不生效(阻止PC事件可以禁止用户缩放)
      *       3. 解决body的overflow:hidden;在移动端不生效的问题
+     *       4. 禁止系统默认的滚动条效果,橡皮筋效果（拉取反弹）
+     *       5. 禁止长按选中文字，选中图片
+     *  缺点： 1. 阻止了焦点元素获取焦点的行为(通过ev.stopPropagation()获取焦点)
      * */
      document.addEventListener('touchstart',function(ev){
          ev.preventDefault();
+     });
+
+     document.getElementById("txt").addEventListener('touchstart',function(ev){
+         ev.stopPropagation()
      });
 </script>
 </html>
