--- a/transform详解/1-transform变换.html
+++ b/transform详解/1-transform变换.html
@@ -36,7 +36,7 @@
          window.onload = function(){
              var div = document.getElementById('div');
              div.addEventListener('touchend',function(){
-                 this.style.transform = this.style.WebkitTransform = "rotate(90deg)"
+                 this.style.transform = this.style.WebkitTransform = "skewX(20deg) skewY(20deg)"
              });
          }
     </script>
