--- a/transform详解/5-transform实现3d效果.html
+++ b/transform详解/5-transform实现3d效果.html
@@ -49,7 +49,8 @@
         *    transform-style:
         *        元素在做3d变换的时候是否保留子元素的3d变换
         *              flat(不保留)/preserve-3d(保留)
-        *              
+        *    perspective-origin: center center
+                  *       视线的方向
         * */
     </script>
 </head>
