点击旋转30度的效果实现

--- a/transform详解/7-transform的获取与设置函数的封装cssTransform.html
+++ b/transform详解/7-transform的获取与设置函数的封装cssTransform.html
@@ -36,10 +36,10 @@
                           case 'scaleX':
                           case 'scaleY':
                           case 'scaleZ':
-                              element.transform[attr] = attr + "(1)";
+                              element.transform[attr] = 1;
                               break;
                           default:
-                              element.transform[attr] = attr + "(0)";
+                              element.transform[attr] = 0;
 
                       }
                  }
@@ -78,8 +78,12 @@
 
         window.onload = function(){
             var div = document.querySelector("#div");
-            cssTransform(div,'skew',45);
-            console.log(cssTransform(div,'scale'));
+            div.addEventListener('touchstart',function(){
+                var deg =  cssTransform(div,'rotate');;
+                deg +=30;
+                cssTransform(div,'rotate',deg);
+            })
+
         }
     </script>
 </head>
