--- a/陀螺仪操作/1-devicemotion事件.html
+++ b/陀螺仪操作/1-devicemotion事件.html
@@ -27,10 +27,21 @@
                 var x = Math.round(motion.x);
                 var y = Math.round(motion.y);
                 var z = Math.round(motion.z);
+                if(isAndroid()){
+                    x = -x;
+                    y = -y;
+                    z = -z;
+                }
+               
                 box.innerHTML = "x:" + x;
                 box.innerHTML += '<br/>y:' + y;
                 box.innerHTML += '<br/>z:' + z;
             });
+        }
+
+        function isAndroid(){
+            var u = navigator.userAgent;
+            return u.indexOf('Android') > -1 || u.indexOf('Adr') > -1;
         }
     </script>
 </head>
