--- a/陀螺仪操作/3-陀螺仪控制设备移动.html
+++ b/陀螺仪操作/3-陀螺仪控制设备移动.html
@@ -20,7 +20,7 @@
 <body>
      <div id="box"></div>
 </body>
-<script src="m.Tween-transform.js"></script>
+<script src="../多指操作/m.Tween-transform.js"></script>
 <script>
      var box = document.querySelector('#box');
      window.addEventListener('devicemotion',function(ev){
