--- a/陀螺仪操作/8-手机旋转场景切换.html
+++ b/陀螺仪操作/8-手机旋转场景切换.html
@@ -70,7 +70,7 @@
           </div>
      </div>
 </body>
-<script src="m.Tween-transform.js"></script>
+<script src="../多指操作/m.Tween-transform.js"></script>
 <script>
      var box = document.querySelector('#box');
      var divs = box.querySelectorAll('div');
