--- a/陀螺仪操作/6-横竖屏切换的第二种处理方式(旋转div).html
+++ b/陀螺仪操作/6-横竖屏切换的第二种处理方式(旋转div).html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="m.Tween-transform.js"></script>
+    <script src="../多指操作/m.Tween-transform.js"></script>
     <style>
         body {
             margin:0;
