添加图片旋转相关的功能(gesture相关事件只有iPhone下生效)

--- a/多指操作/2-图片缩放.html
+++ b/多指操作/2-图片缩放.html
@@ -23,12 +23,15 @@
 <script>
      var box = document.querySelector('#box');
      var startScale;
+     var startRotation;
      box.addEventListener('gesturestart',function(ev){
          startScale = css(this,'scale');
+         startRotation = css(this,'rotate');
      });
      box.addEventListener('gesturechange',function(ev){
            this.innerHTML = ev.scale;
            css(this,'scale',ev.scale * startScale);
+           css(this,'rotate',ev.rotation + startRotation);
      });
 </script>
 </html>
