--- a/多指操作/4-多指操作的封装.html
+++ b/多指操作/4-多指操作的封装.html
@@ -29,17 +29,47 @@
     *       change:fn // gesturechange
     *   }
     * */
+    var getDis = function(point1,point2){
+        var x = point1.x-point2.x;
+        var y = point1.y-point2.y;
+        return Math.sqrt(x*x + y*y);
+    }
+
+    var getDeg = function(point1,point2){
+          var x = point1.x - point2.x;
+          var y = point1.y - point2.y;
+          return Math.atan2(y,x);
+    }
+
     var setGesture = function(init){
         var el = init.el;
         var isGesture = false;
+        var startPoint = [];
         if(!el){
             return;
         }
         el.addEventListener('touchstart',function(ev){
             isGesture = true
             if(ev.touches.length >= 2){
+                startPoint[0] = {x:ev.touches[0].pageX,y:ev.touches[0].pageY}
+                startPoint[1] = {x:ev.touches[1].pageX,y:ev.touches[1].pageY}
                 init.start && init.start.call(el,ev)
             }
+        });
+
+        el.addEventListener('touchmove',function(ev){
+             if(isGesture && ev.touches.length >= 2){
+                  var nowPoint = [];
+                  nowPoint[0] = {x:ev.touches[0].pageX,y:ev.touches[0].pageY};
+                  nowPoint[1] = {x:ev.touches[1].pageX,y:ev.touches[1].pageY};
+                  var startDis = getDis(startPoint[0],startPoint[1]);
+                  var startDeg = getDeg(startPoint[0],startPoint[1]);
+                  var newDis = getDis(nowPoint[0],nowPoint[1]);
+                  var newDeg = getDis(nowPoint[0],nowPoint[1]);
+                  ev.scale = newDis / startDis;
+                  ev.rotation = newDeg - startDeg;
+                  init.change && init.change.call(el,ev);
+             }
         });
 
         el.addEventListener('touchend',function(ev){
@@ -58,8 +88,12 @@
         start:function(){
             this.style.background = 'green';
         },
+        change:function(ev){
+            this.innerHTML = ev.scale;
+            this.innerHTML += '<br/>' + ev.rotation;
+        },
         end:function(){
-            this.style.background = 'black';
+            this.style.background = 'blue';
         }
     })
 </script>
